prevent lightbox thumbnails overflowing with oversized images
e.g.
http://www.red-gate.com/products/sql-development/sql-compare/
http://www.red-gate.com/products/sql-development/sql-search/

--- a/src/lightbox/css/components/_honeycomb.lightbox.components.lightbox.scss
+++ b/src/lightbox/css/components/_honeycomb.lightbox.components.lightbox.scss
@@ -9,6 +9,7 @@
 .lightbox {
     position: relative;
     display: inline-block;
+    max-width: 100%;
 
     // IE7 support.
     .ie7 & {
